[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/Background.png" type="Texture" id=1]
[ext_resource path="res://ui_components/groupbox/GroupBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui_components/button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui_scenes/game_settings/GameSettings.gd" type="Script" id=4]
[ext_resource path="res://Fonts/mkocr.ttf" type="DynamicFontData" id=5]




[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.435294, 0.580392, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0901961, 0.435294, 0.580392, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.435294, 0.580392, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0901961, 0.435294, 0.580392, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0901961, 0.435294, 0.580392, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[node name="GameSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -408.0
margin_top = -12.0
margin_right = 954.0
margin_bottom = 1408.0
rect_rotation = -25.0
texture = ExtResource( 1 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="gbSettings" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -73.0
margin_right = 232.0
margin_bottom = 73.0
Text = "Configuración del juego"
ShowCloseButton = false

[node name="VBoxContainer" type="VBoxContainer" parent="gbSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 40.0
margin_right = -5.0
margin_bottom = -49.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="gbSettings/VBoxContainer"]
margin_right = 454.0
margin_bottom = 46.0
size_flags_horizontal = 3
columns = 2

[node name="lblBoardSize" type="Label" parent="gbSettings/VBoxContainer/GridContainer"]
margin_right = 183.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0901961, 0.435294, 0.580392, 1 )
text = "Tamaño del tablero:"

[node name="obBoardSize" type="OptionButton" parent="gbSettings/VBoxContainer/GridContainer"]
margin_left = 187.0
margin_right = 454.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.914063, 0.914063, 0.914063, 1 )
custom_colors/font_color = Color( 0.913725, 0.913725, 0.913725, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.913725, 0.913725, 1 )
custom_colors/font_color_pressed = Color( 0.913725, 0.913725, 0.913725, 1 )

[node name="lblBoardSize2" type="Label" parent="gbSettings/VBoxContainer/GridContainer"]
margin_top = 25.0
margin_right = 183.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0901961, 0.435294, 0.580392, 1 )
text = "Movimientos aleatorios:"

[node name="spShuffleMoves" type="SpinBox" parent="gbSettings/VBoxContainer/GridContainer"]
margin_left = 187.0
margin_top = 22.0
margin_right = 454.0
margin_bottom = 46.0
min_value = 1.0
max_value = 500.0
value = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="gbSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 97.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="gbSettings/VBoxContainer2"]
margin_top = 4.0
margin_right = 454.0
margin_bottom = 44.0
size_flags_horizontal = 3
alignment = 2

[node name="btnSave" parent="gbSettings/VBoxContainer2/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 354.0
margin_right = 454.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
Text = "Guardar"
Disabled = false

[node name="btnBack" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -44.0
margin_right = 104.0
margin_bottom = -4.0
Text = "Volver"
Disabled = false
[connection signal="Clicked" from="gbSettings/VBoxContainer2/HBoxContainer/btnSave" to="." method="_on_btnSave_Clicked"]
[connection signal="Clicked" from="btnBack" to="." method="_on_btnBack_Clicked"]
